# 29-1-superdog

./: CMakeLists.txt  README.md
include/: Dancing.h  animal.h  counting.h  dog.h  functions.h  swiming.h  talent.h
src/: CMakeLists.txt  animal.cpp  counting.cpp  dancing.cpp  dog.cpp  main.cpp  swiming.cpp  talent.cpp
